minor fixes on japanese localization

--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -211,7 +211,7 @@
     <value>TD 2016 legacy version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>この自己解凍ファイルは ThinkDesign suite 2016 64bit 公式版をインストールします。</value>
+    <value>この iso ファイルは ThinkDesign 2016 のインストール用ファイルです。</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
     <value>thinkPLM 2016 公式版。</value>
@@ -598,7 +598,7 @@
     <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>この自己解凍ファイルは ThinkDesign Viewer 2016 をインストールします。</value>
+    <value>この iso ファイルは ThinkDesign Viewer 2016 のインストール用ファイルです。</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>フローティングライセンスサーバーのインストーラーとバージョン 2016 用ユーティリティツール。</value>
@@ -886,13 +886,13 @@
     <value>Email correctly sent</value>
   </data>
   <data name="Description2016TDViewerLightSP1" xml:space="preserve">
-    <value>この自己解凍ファイルは ThinkDesign Viewer 2016 SP1 をインストールします。</value>
+    <value>この iso ファイルは ThinkDesign Viewer 2016 SP1 のインストール用ファイルです。</value>
   </data>
   <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
     <value>TD 2016 SP1 legacy version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>ThinkDesign 2016 SP1 公式版。</value>
+    <value>ThinkDesign 2016 SP1 公式リリース版。推奨バージョンです。</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
     <value>thinkPLM 2016 SP1 公式版。</value>
