--- a/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
@@ -181,7 +181,7 @@
     <value>Bienvenur sur le nouveau portail du support client!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>La &lt;b&gt;version officielle de ThinkDesign 2016&lt;/b&gt; est disponible! Consultez la rubrique téléchargement.</value>
+    <value>Le &lt;b&gt;service pack 1 de thinkdesign 2016&lt;/b&gt; est maintenant disponible! Consultez la rubrique téléchargement.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>Essayez ThinkDesign 2016 gratuitement ! Contactez nous pour en savoir davantage.</value>
