--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -463,7 +463,7 @@
     <value>新しいカスタマーケアポータルへようこそ！</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;ThinkDesign 2016&lt;/b&gt; がダウンロードエリアからご利用いただけます！</value>
+    <value>&lt;b&gt;ThinkDesign 2016 SP1&lt;/b&gt; がダウンロードエリアからご利用いただけます！</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>ThinkDesign 2016 のフリートライアルが可能です。ご興味ある場合はお知らせください。</value>
