--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -211,7 +211,7 @@
     <value>TD 2016 legacy beta version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>공식버전</value>
+    <value>이 iso 파일은 ThinkDesign 2016의 설치 파일입니다.</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
     <value>thinkPLM 2016 공식버전</value>
@@ -463,7 +463,7 @@
     <value>새로운 고객 관리 사이트에 오신 것을 환영합니다!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;ThinkDesign 2016&lt;/b&gt; 다운로드 항목에서 사용할 수 있습니다!</value>
+    <value>&lt;b&gt;ThinkDesign 2016 SP1&lt;/b&gt; 다운로드 항목에서 사용할 수 있습니다!</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>ThinkDesign 2016 무료 평가판이 가능합니다. 관심 있으면 알려 주시기 바랍니다.</value>
@@ -598,7 +598,7 @@
     <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>이 자동 압축 풀림 파일은 TDViewerLight 2016 프로그램을 설치합니다.</value>
+    <value>이 iso 파일은 ThinkDesign Viewer 2016의 설치 파일입니다.</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>Floating 라이선스 서버의 설치와 버전 2016 용 유틸리티 도구</value>
@@ -886,16 +886,16 @@
     <value>Email correctly sent</value>
   </data>
   <data name="Description2016TDViewerLightSP1" xml:space="preserve">
-    <value>이 자동 압축 풀림 파일은 TDViewerLight 2016 SP1 프로그램을 설치합니다.</value>
+    <value>이 iso 파일은 ThinkDesign Viewer 2016 SP1의 설치 파일입니다.</value>
   </data>
   <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
     <value>TD 2016 SP1 legacy version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>ThinkDesign 2016 SP1 공식버전.</value>
+    <value>ThinkDesign 2016 SP1 공식 릴리스. 권장 버전입니다.</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
-    <value>thinkPLM 2016 SP1 공식버전.</value>
+    <value>thinkPLM 2016 SP1 공식버전</value>
   </data>
   <data name="Product2016TDViewerLightSP1" xml:space="preserve">
     <value>TDViewerLight 2016 SP1</value>
