--- a/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
+++ b/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
@@ -181,7 +181,7 @@
     <value>欢迎访问 Customer Care 新界面！</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;ThinkDesign2016&lt;/b&gt;官方版本现已发布！请点击下载界面查看！</value>
+    <value>&lt;b&gt;ThinkDesign 2016 SP1&lt;/b&gt;官方版本现已发布！请点击下载界面查看！</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>填写信息获取ThinkDesign2016免费试用。</value>
@@ -316,10 +316,10 @@
     <value>TD2016旧版-旧系统用。</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>推荐版本， ThinkDesign 2016官方发布。</value>
+    <value>本压缩文件为ThinkDesign suite 2016 64bit安装包。</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>本文件包含thinkPLM2016正式版。</value>
+    <value>本文件包含thinkPLM2016。</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2011.zip</value>
@@ -886,16 +886,16 @@
     <value>Email correctly sent</value>
   </data>
   <data name="Description2016TDViewerLightSP1" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2016 SP1 application.</value>
+    <value>本压缩文件为TDViewerLight 2016 SP1安装包。</value>
   </data>
   <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
-    <value>TD 2016 SP1 legacy version for old systems.</value>
+    <value>TD2016 SP1旧版-旧系统用。</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>Recommended version. Official release of ThinkDesign 2016 SP1.</value>
+    <value>推荐版本，ThinkDesign 2016 SP1官方发布。</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
-    <value>This section includes thinkPLM 2016 SP1 official version.</value>
+    <value>本文件包含thinkPLM2016 SP1正式版。</value>
   </data>
   <data name="Product2016TDViewerLightSP1" xml:space="preserve">
     <value>TDViewerLight 2016 SP1</value>
