added new column 2Bren, licenseid in refid2, probability in orders

--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -181,7 +181,7 @@
     <value>Willkommen im neuen Customer Care Portal!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>Das &lt;b&gt;offizielle Release von ThinkDesign 2016&lt;/b&gt; ist da! Schauen Sie im Downloadbereich vorbei.</value>
+    <value>&lt;b&gt;Service Pack 1 für ThinkDesign 2016&lt;/b&gt; ist jetzt verfügbar! Schauen Sie im Downloadbereich vorbei.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>Testen Sie ThinkDesign 2016 kostenlos! Schreiben Sie uns um mehr zu erfahren.</value>
@@ -316,7 +316,7 @@
     <value>TD 2016 für 32bit-Systeme.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Diese selbstextrahierende Datei installiert ThinkDesign 2016.</value>
+    <value>Diese .iso Datei installiert ThinkDesign 2016.</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
     <value>thinkPLM Version 2016.</value>
@@ -598,7 +598,7 @@
     <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>Diese selbstextrahierende Datei installiert den TDViewerLight Version 2016.</value>
+    <value>Diese .iso Datei installiert die Anwendung TDViewerLight 2016.</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>Installation für Lizenzserver, Zusatzwerkzeuge und -Plugins der Version 2016.</value>
@@ -886,7 +886,7 @@
     <value>Email correctly sent</value>
   </data>
   <data name="Description2016TDViewerLightSP1" xml:space="preserve">
-    <value>Diese selbstextrahierende Datei installiert den TDViewerLight Version 2016 SP1.</value>
+    <value>Diese .iso Datei installiert die Anwendung TDViewerLight 2016 SP1.</value>
   </data>
   <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
     <value>TD 2016 SP1 für 32bit-Systeme.</value>
