TD 2016 SP2 release
mail waiting on RD case
change version BLU

--- a/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
@@ -181,7 +181,7 @@
     <value>Bienvenur sur le nouveau portail du support client!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>Le &lt;b&gt;service pack 1 de ThinkDesign 2016&lt;/b&gt; est maintenant disponible! Consultez la rubrique téléchargement.</value>
+    <value>Le &lt;b&gt;service pack 2 de ThinkDesign 2016&lt;/b&gt; est maintenant disponible! Consultez la rubrique téléchargement.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>Essayez ThinkDesign 2016 gratuitement ! Contactez nous pour en savoir davantage.</value>
@@ -303,14 +303,14 @@
   <data name="Description2015Utilitytools" xml:space="preserve">
     <value>Programme d'installation des licences flottantes, utilitaires et ajouts pour la version 2015.</value>
   </data>
-  <data name="Description2016ThinkDesign32bit" xml:space="preserve">
-    <value>Version TD2016 pour système 32 bits.</value>
+  <data name="Description2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>Version TD2016 SP2 pour système 32 bits.</value>
   </data>
-  <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Ce fichier .iso va installer official ThinkDesign suite 2016 64 bits.</value>
+  <data name="Description2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>Recommandée. Version officielle de ThinkDesign 2016 SP2.</value>
   </data>
-  <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>Cette partie inclus thinkPLM 2016.</value>
+  <data name="Description2016thinkPLMSP2" xml:space="preserve">
+    <value>Cette partie inclus thinkPLM 2016 SP2 version officielle.</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2011.1build410/SelfCD_tdviewer_2011T1_b410.exe</value>
@@ -393,14 +393,14 @@
   <data name="Download2015Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2015.zip</value>
   </data>
-  <data name="Download2016ThinkDesign32bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign32bitSp2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=13a371ae4db5545a5ab249ad33cd10141&amp;authkey=Af2esvc4UfDlktxqnwFIZIQ</value>
   </data>
-  <data name="Download2016ThinkDesign64bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_64bit_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1a3dbf40105194a3fa398c799a4d6d8a8&amp;authkey=AezeTx-tm0HpAdfUvjNLswE</value>
   </data>
-  <data name="Download2016thinkPLM" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_thinkplm_2016T1_b20718.iso</value>
+  <data name="Download2016thinkPLMSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1714768a3a2964912ac55a15ebf97b601&amp;authkey=AZqZyyejfmWEjVDsbLpLC6g</value>
   </data>
   <data name="Product" xml:space="preserve">
     <value>Produit</value>
@@ -477,14 +477,14 @@
   <data name="Product2015Utilitytools" xml:space="preserve">
     <value>Programme d'installation des licences flottantes et utilitaires</value>
   </data>
-  <data name="Product2016ThinkDesign32bit" xml:space="preserve">
-    <value>ThinkDesign 2016 32bit</value>
+  <data name="Product2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit SP2</value>
   </data>
-  <data name="Product2016ThinkDesign64bit" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit</value>
+  <data name="Product2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit SP2</value>
   </data>
-  <data name="Product2016thinkPLM" xml:space="preserve">
-    <value>thinkPLM 2016</value>
+  <data name="Product2016thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2016 SP2</value>
   </data>
   <data name="View_HomeIndex_of" xml:space="preserve">
     <value>de</value>
@@ -577,22 +577,22 @@
     <value>Télécharger la version officielle ici!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
+    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
   </data>
-  <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>Ce fichier .iso va installer l'application TDViewerLight 2016.</value>
+  <data name="Description2016TDViewerLightSP2" xml:space="preserve">
+    <value>Ce fichier .iso va installer l'application TDViewerLight 2016 SP2.</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>Programme d'installation des licences flottantes, utilitaires et ajouts pour la version 2016.</value>
   </data>
-  <data name="Download2016TDViewerLight" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/tdviewer_2016T1_b20718_64bit.iso</value>
+  <data name="Download2016TDViewerLightSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=16841283a9bfc4881ba9aa955a467ef1f&amp;authkey=AatBNuQCoNLZmH_tyRqq7RU</value>
   </data>
   <data name="Download2016Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2016.zip</value>
   </data>
-  <data name="Product2016TDViewerLight" xml:space="preserve">
-    <value>TDViewerLight 2016</value>
+  <data name="Product2016TDViewerLightSP2" xml:space="preserve">
+    <value>TDViewerLight 2016 SP2</value>
   </data>
   <data name="Product2016Utilitytools" xml:space="preserve">
     <value>Programme d'installation des licences flottantes et utilitaires</value>
@@ -874,7 +874,7 @@
     <value>Version TD2016 SP1 pour système 32 bits.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>Recommandée. Version officielle de ThinkDesign 2016 SP1.</value>
+    <value>Ce fichier .iso va installer ThinkDesign 2016 64 bits SP1.</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
     <value>Cette partie inclus thinkPLM 2016 SP1 version officielle.</value>
