--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -198,14 +198,14 @@
   <data name="Description2015Utilitytools" xml:space="preserve">
     <value>Floating Licensing Installer, procedure di utilità e plug-in per la versione 2015.</value>
   </data>
-  <data name="Description2016ThinkDesign32bit" xml:space="preserve">
-    <value>TD 2016 versione legacy per sistemi operativi obsoleti o integrazione con software non aggiornati.</value>
+  <data name="Description2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>TD 2016 SP2 versione legacy per sistemi operativi obsoleti o integrazione con software non aggiornati.</value>
   </data>
-  <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Questo  file .iso permette di installare ThinkDesign 2016.</value>
+  <data name="Description2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>Versione raccomandata. Release ufficiale del SP2 di ThinkDesign 2016.</value>
   </data>
-  <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>Questo file .iso permette di installare thinkPLM 2016. </value>
+  <data name="Description2016thinkPLMSP2" xml:space="preserve">
+    <value>Questa sezione include la versione ufficiale di thinkPLM 2016 SP2.</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2011.1build410/SelfCD_tdviewer_2011T1_b410.exe</value>
@@ -288,14 +288,14 @@
   <data name="Download2015Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2015.zip</value>
   </data>
-  <data name="Download2016ThinkDesign32bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=13a371ae4db5545a5ab249ad33cd10141&amp;authkey=Af2esvc4UfDlktxqnwFIZIQ</value>
   </data>
-  <data name="Download2016ThinkDesign64bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_64bit_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1a3dbf40105194a3fa398c799a4d6d8a8&amp;authkey=AezeTx-tm0HpAdfUvjNLswE</value>
   </data>
-  <data name="Download2016thinkPLM" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_thinkplm_2016T1_b20718.iso</value>
+  <data name="Download2016thinkPLMSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1714768a3a2964912ac55a15ebf97b601&amp;authkey=AZqZyyejfmWEjVDsbLpLC6g</value>
   </data>
   <data name="LengthPassword" xml:space="preserve">
     <value>La {0} deve essere lunga almeno {2} caratteri.</value>
@@ -387,14 +387,14 @@
   <data name="Product2015Utilitytools" xml:space="preserve">
     <value>Utility tools &amp; Floating Licensing Installer</value>
   </data>
-  <data name="Product2016ThinkDesign32bit" xml:space="preserve">
-    <value>ThinkDesign 2016 32bit</value>
+  <data name="Product2016ThinkDesign32bit2" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit SP2</value>
   </data>
-  <data name="Product2016ThinkDesign64bit" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit</value>
+  <data name="Product2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit SP2</value>
   </data>
-  <data name="Product2016thinkPLM" xml:space="preserve">
-    <value>thinkPLM 2016</value>
+  <data name="Product2016thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2016 SP2</value>
   </data>
   <data name="RequiredFieldPassword" xml:space="preserve">
     <value>Inserire Password</value>
@@ -445,7 +445,7 @@
     <value>Benvenuto nel nuovo portale del Customer Care!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>Il &lt;b&gt;Service Pack 1 di ThinkDesign 2016&lt;/b&gt; è stato rilasciato ed è ora disponibile nella sezione di Download.</value>
+    <value>Il &lt;b&gt;Service Pack 2 di ThinkDesign 2016&lt;/b&gt; è stato rilasciato ed è ora disponibile nella sezione di Download.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>Prova gratuitamente ThinkDesign 2016! Scrivici per saperne di più.</value>
@@ -577,22 +577,22 @@
     <value>Scarica la nuova release ufficiale!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
+    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
   </data>
-  <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>Questo file .iso permette di installare l'applicazione TDViewerLight 2016.</value>
+  <data name="Description2016TDViewerLightSP2" xml:space="preserve">
+    <value>Questo file .iso permette di installare l'applicazione TDViewerLight 2016 SP2.</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>Floating Licensing Installer, procedure di utilità e plug-in per la versione 2016.</value>
   </data>
-  <data name="Download2016TDViewerLight" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/tdviewer_2016T1_b20718_64bit.iso</value>
+  <data name="Download2016TDViewerLightSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=16841283a9bfc4881ba9aa955a467ef1f&amp;authkey=AatBNuQCoNLZmH_tyRqq7RU</value>
   </data>
   <data name="Download2016Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2016.zip</value>
   </data>
-  <data name="Product2016TDViewerLight" xml:space="preserve">
-    <value>TDViewerLight 2016</value>
+  <data name="Product2016TDViewerLightSP2" xml:space="preserve">
+    <value>TDViewerLight 2016 Sp2</value>
   </data>
   <data name="Product2016Utilitytools" xml:space="preserve">
     <value>Utility tools &amp; Floating Licensing Installer</value>
@@ -874,7 +874,7 @@
     <value>TD 2016 SP1 versione legacy per sistemi operativi obsoleti o integrazione con software non aggiornati.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>Versione raccomandata. Release ufficiale del SP1 di ThinkDesign 2016.</value>
+    <value>Questo  file .iso permette di installare ThinkDesign 2016 SP1.</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
     <value>Questa sezione include la versione ufficiale di thinkPLM 2016 SP1.</value>
