--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -198,14 +198,14 @@
   <data name="Description2015Utilitytools" xml:space="preserve">
     <value>フローティングライセンスサーバーのインストーラーとバージョン 2015 用ユーティリティツール。</value>
   </data>
-  <data name="Description2016ThinkDesign32bit" xml:space="preserve">
-    <value>TD 2016 legacy version for old systems.</value>
+  <data name="Description2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>TD 2016 SP2 legacy version for old systems.</value>
   </data>
-  <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>この iso ファイルは ThinkDesign 2016 のインストール用ファイルです。</value>
+  <data name="Description2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 SP2 公式リリース版。推奨バージョンです。</value>
   </data>
-  <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>thinkPLM 2016 公式版。</value>
+  <data name="Description2016thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2016 SP2 公式版。</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2011.1build410/SelfCD_tdviewer_2011T1_b410.exe</value>
@@ -288,14 +288,14 @@
   <data name="Download2015Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2015.2/Tools2015.zip</value>
   </data>
-  <data name="Download2016ThinkDesign32bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=13a371ae4db5545a5ab249ad33cd10141&amp;authkey=Af2esvc4UfDlktxqnwFIZIQ</value>
   </data>
-  <data name="Download2016ThinkDesign64bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20718/dvd_td_64bit_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1a3dbf40105194a3fa398c799a4d6d8a8&amp;authkey=AezeTx-tm0HpAdfUvjNLswE</value>
   </data>
-  <data name="Download2016thinkPLM" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20718/dvd_thinkplm_2016T1_b20718.iso</value>
+  <data name="Download2016thinkPLMSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1714768a3a2964912ac55a15ebf97b601&amp;authkey=AZqZyyejfmWEjVDsbLpLC6g</value>
   </data>
   <data name="LengthPassword" xml:space="preserve">
     <value>{0} は少なくとも {2} 文字以上である必要があります。</value>
@@ -387,14 +387,14 @@
   <data name="Product2015Utilitytools" xml:space="preserve">
     <value>ユーティリティツールとフローティングライセンスサーバー</value>
   </data>
-  <data name="Product2016ThinkDesign32bit" xml:space="preserve">
-    <value>ThinkDesign 2016 32bit</value>
+  <data name="Product2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit SP2</value>
   </data>
-  <data name="Product2016ThinkDesign64bit" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit</value>
+  <data name="Product2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit SP2</value>
   </data>
-  <data name="Product2016thinkPLM" xml:space="preserve">
-    <value>thinkPLM 2016</value>
+  <data name="Product2016thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2016 SP2</value>
   </data>
   <data name="RequiredFieldPassword" xml:space="preserve">
     <value>パスワードを入力してください。</value>
@@ -445,7 +445,7 @@
     <value>新しいカスタマーケアポータルへようこそ！</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;ThinkDesign 2016 SP1&lt;/b&gt; がダウンロードエリアからご利用いただけます！</value>
+    <value>&lt;b&gt;ThinkDesign 2016 SP2&lt;/b&gt; がダウンロードエリアからご利用いただけます！</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>ThinkDesign 2016 のフリートライアルが可能です。ご興味ある場合はお知らせください。</value>
@@ -577,22 +577,22 @@
     <value>公式版のダウンロードが可能です！</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
+    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
   </data>
-  <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>この iso ファイルは ThinkDesign Viewer 2016 のインストール用ファイルです。</value>
+  <data name="Description2016TDViewerLightSP2" xml:space="preserve">
+    <value>この iso ファイルは ThinkDesign Viewer 2016 SP2 のインストール用ファイルです。</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>フローティングライセンスサーバーのインストーラーとバージョン 2016 用ユーティリティツール。</value>
   </data>
-  <data name="Download2016TDViewerLight" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20718/tdviewer_2016T1_b20718_64bit.iso</value>
+  <data name="Download2016TDViewerLightSp2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=16841283a9bfc4881ba9aa955a467ef1f&amp;authkey=AatBNuQCoNLZmH_tyRqq7RU</value>
   </data>
   <data name="Download2016Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2016.1/Tools2016.zip</value>
   </data>
-  <data name="Product2016TDViewerLight" xml:space="preserve">
-    <value>TDViewerLight 2016</value>
+  <data name="Product2016TDViewerLightSP2" xml:space="preserve">
+    <value>TDViewerLight 2016 SP2</value>
   </data>
   <data name="Product2016Utilitytools" xml:space="preserve">
     <value>ユーティリティツールとフローティングライセンスサーバー</value>
@@ -874,7 +874,7 @@
     <value>TD 2016 SP1 legacy version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>ThinkDesign 2016 SP1 公式リリース版。推奨バージョンです。</value>
+    <value>この iso ファイルは ThinkDesign 2016 SP1 のインストール用ファイルです。</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
     <value>thinkPLM 2016 SP1 公式版。</value>
@@ -907,6 +907,6 @@
     <value>更新</value>
   </data>
   <data name="View_Download_Warning" xml:space="preserve">
-    <value>To install all CAD products of ThinkDesign suite (TDDrafting, TDBase, TDTooling, TDProfessional, etc.) you just need to &lt;b&gt;download the complete installation package of ThinkDesign&lt;/b&gt;. The different products will then be enabled through specific passwords.</value>
+    <value>ThinkDesign suite（TDDrafting、TDBase、TDTooling、TDProfessional など）のすべての CAD 製品をインストールするには、はじめに &lt;b&gt;ThinkDesign の完全なインストールパッケージをダウンロードします&lt;/b&gt;。その後、それぞれの製品用のパスワードを入力します。</value>
   </data>
 </root>
