--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -181,7 +181,7 @@
     <value>Willkommen im neuen Customer Care Portal!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;Service Pack 1 für ThinkDesign 2016&lt;/b&gt; ist jetzt verfügbar! Schauen Sie im Downloadbereich vorbei.</value>
+    <value>&lt;b&gt;Service Pack 2 für ThinkDesign 2016&lt;/b&gt; ist jetzt verfügbar! Schauen Sie im Downloadbereich vorbei.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>Testen Sie ThinkDesign 2016 kostenlos! Schreiben Sie uns um mehr zu erfahren.</value>
@@ -303,14 +303,14 @@
   <data name="Description2015Utilitytools" xml:space="preserve">
     <value>Installation für Lizenzserver, Zusatzwerkzeuge und -Plugins der Version 2015.</value>
   </data>
-  <data name="Description2016ThinkDesign32bit" xml:space="preserve">
-    <value>TD 2016 für 32bit-Systeme.</value>
+  <data name="Description2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>TD 2016 SP2 für 32bit-Systeme.</value>
   </data>
-  <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Diese .iso Datei installiert ThinkDesign 2016.</value>
+  <data name="Description2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>Empfohlene Version. Offizielles Release ThinkDesign 2016 SP2.</value>
   </data>
-  <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>thinkPLM Version 2016.</value>
+  <data name="Description2016thinkPLMSP2" xml:space="preserve">
+    <value>Offizielle Version thinkPLM 2016 SP2.</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2011.1build410/SelfCD_tdviewer_2011T1_b410.exe</value>
@@ -393,14 +393,14 @@
   <data name="Download2015Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2015.zip</value>
   </data>
-  <data name="Download2016ThinkDesign32bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=13a371ae4db5545a5ab249ad33cd10141&amp;authkey=Af2esvc4UfDlktxqnwFIZIQ</value>
   </data>
-  <data name="Download2016ThinkDesign64bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_64bit_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1a3dbf40105194a3fa398c799a4d6d8a8&amp;authkey=AezeTx-tm0HpAdfUvjNLswE</value>
   </data>
-  <data name="Download2016thinkPLM" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_thinkplm_2016T1_b20718.iso</value>
+  <data name="Download2016thinkPLMSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1714768a3a2964912ac55a15ebf97b601&amp;authkey=AZqZyyejfmWEjVDsbLpLC6g</value>
   </data>
   <data name="Product" xml:space="preserve">
     <value>Produkt</value>
@@ -477,14 +477,14 @@
   <data name="Product2015Utilitytools" xml:space="preserve">
     <value>Zusatzwerkzeuge &amp; Installation Lizenzserver</value>
   </data>
-  <data name="Product2016ThinkDesign32bit" xml:space="preserve">
-    <value>ThinkDesign 2016 32bit</value>
+  <data name="Product2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit SP2</value>
   </data>
-  <data name="Product2016ThinkDesign64bit" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit</value>
+  <data name="Product2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit SP2</value>
   </data>
-  <data name="Product2016thinkPLM" xml:space="preserve">
-    <value>thinkPLM 2016</value>
+  <data name="Product2016thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2016 SP2</value>
   </data>
   <data name="View_HomeIndex_of" xml:space="preserve">
     <value>von</value>
@@ -577,22 +577,22 @@
     <value>Downloaden Sie hier das offizielle Release!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
+    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
   </data>
-  <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>Diese .iso Datei installiert die Anwendung TDViewerLight 2016.</value>
+  <data name="Description2016TDViewerLightSP2" xml:space="preserve">
+    <value>Diese .iso Datei installiert die Anwendung TDViewerLight 2016 SP2.</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>Installation für Lizenzserver, Zusatzwerkzeuge und -Plugins der Version 2016.</value>
   </data>
-  <data name="Download2016TDViewerLight" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/tdviewer_2016T1_b20718_64bit.iso</value>
+  <data name="Download2016TDViewerLightSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=16841283a9bfc4881ba9aa955a467ef1f&amp;authkey=AatBNuQCoNLZmH_tyRqq7RU</value>
   </data>
   <data name="Download2016Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2016.zip</value>
   </data>
-  <data name="Product2016TDViewerLight" xml:space="preserve">
-    <value>TDViewerLight 2016</value>
+  <data name="Product2016TDViewerLightSP2" xml:space="preserve">
+    <value>TDViewerLight 2016 SP2</value>
   </data>
   <data name="Product2016Utilitytools" xml:space="preserve">
     <value>Zusatzwerkzeuge &amp; Installation Lizenzserver</value>
@@ -874,7 +874,7 @@
     <value>TD 2016 SP1 für 32bit-Systeme.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>Empfohlene Version. Offizielles Release ThinkDesign 2016 SP1.</value>
+    <value>Diese .iso Datei installiert ThinkDesign 2016 SP1.</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
     <value>Offizielle Version thinkPLM 2016 SP1.</value>
