--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -198,14 +198,14 @@
   <data name="Description2015Utilitytools" xml:space="preserve">
     <value>Floating 라이선스 서버의 설치와 버전 2015 용 유틸리티 도구</value>
   </data>
-  <data name="Description2016ThinkDesign32bit" xml:space="preserve">
-    <value>TD 2016 legacy beta version for old systems.</value>
+  <data name="Description2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>TD 2016 SP2 legacy beta version for old systems.</value>
   </data>
-  <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>이 iso 파일은 ThinkDesign 2016의 설치 파일입니다.</value>
+  <data name="Description2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 SP2 공식 릴리스. 권장 버전입니다.</value>
   </data>
-  <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>thinkPLM 2016 공식버전</value>
+  <data name="Description2016thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2016 SP2 공식버전</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2011.1build410/SelfCD_tdviewer_2011T1_b410.exe</value>
@@ -288,14 +288,14 @@
   <data name="Download2015Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2015.2/Tools2015.zip</value>
   </data>
-  <data name="Download2016ThinkDesign32bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=13a371ae4db5545a5ab249ad33cd10141&amp;authkey=Af2esvc4UfDlktxqnwFIZIQ</value>
   </data>
-  <data name="Download2016ThinkDesign64bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20718/dvd_td_64bit_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1a3dbf40105194a3fa398c799a4d6d8a8&amp;authkey=AezeTx-tm0HpAdfUvjNLswE</value>
   </data>
-  <data name="Download2016thinkPLM" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20718/dvd_thinkplm_2016T1_b20718.iso</value>
+  <data name="Download2016thinkPLMSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1714768a3a2964912ac55a15ebf97b601&amp;authkey=AZqZyyejfmWEjVDsbLpLC6g</value>
   </data>
   <data name="LengthPassword" xml:space="preserve">
     <value>{0}은 적어도 {2}자 이상이어야합니다.</value>
@@ -387,14 +387,14 @@
   <data name="Product2015Utilitytools" xml:space="preserve">
     <value>유틸리티 도구 &amp; 플로팅라이선스 설치</value>
   </data>
-  <data name="Product2016ThinkDesign32bit" xml:space="preserve">
-    <value>ThinkDesign 2016 32bit</value>
+  <data name="Product2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit SP2</value>
   </data>
-  <data name="Product2016ThinkDesign64bit" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit</value>
+  <data name="Product2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit SP2</value>
   </data>
-  <data name="Product2016thinkPLM" xml:space="preserve">
-    <value>thinkPLM 2016</value>
+  <data name="Product2016thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2016 SP2</value>
   </data>
   <data name="RequiredFieldPassword" xml:space="preserve">
     <value>비밀번호를 입력하세요</value>
@@ -445,7 +445,7 @@
     <value>새로운 고객 관리 사이트에 오신 것을 환영합니다!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;ThinkDesign 2016 SP1&lt;/b&gt; 다운로드 항목에서 사용할 수 있습니다!</value>
+    <value>&lt;b&gt;ThinkDesign 2016 SP2&lt;/b&gt; 다운로드 항목에서 사용할 수 있습니다!</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>ThinkDesign 2016 무료 평가판이 가능합니다. 관심 있으면 알려 주시기 바랍니다.</value>
@@ -577,22 +577,22 @@
     <value>Download here the official release!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
+    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
   </data>
-  <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>이 iso 파일은 ThinkDesign Viewer 2016의 설치 파일입니다.</value>
+  <data name="Description2016TDViewerLightSP2" xml:space="preserve">
+    <value>이 iso 파일은 ThinkDesign Viewer 2016 SP2의 설치 파일입니다.</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>Floating 라이선스 서버의 설치와 버전 2016 용 유틸리티 도구</value>
   </data>
-  <data name="Download2016TDViewerLight" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20718/tdviewer_2016T1_b20718_64bit.iso</value>
+  <data name="Download2016TDViewerLightSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=16841283a9bfc4881ba9aa955a467ef1f&amp;authkey=AatBNuQCoNLZmH_tyRqq7RU</value>
   </data>
   <data name="Download2016Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2016.1/Tools2016.zip</value>
   </data>
-  <data name="Product2016TDViewerLight" xml:space="preserve">
-    <value>TDViewerLight 2016</value>
+  <data name="Product2016TDViewerLightSP2" xml:space="preserve">
+    <value>TDViewerLight 2016 SP2</value>
   </data>
   <data name="Product2016Utilitytools" xml:space="preserve">
     <value>유틸리티 도구 &amp; 플로팅라이선스 설치</value>
@@ -874,7 +874,7 @@
     <value>TD 2016 SP1 legacy version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>ThinkDesign 2016 SP1 공식 릴리스. 권장 버전입니다.</value>
+    <value>이 iso 파일은 ThinkDesign 2016 SP1 의 설치 파일입니다.</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
     <value>thinkPLM 2016 SP1 공식버전</value>
