--- a/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
+++ b/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
@@ -181,7 +181,7 @@
     <value>欢迎访问 Customer Care 新界面！</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;ThinkDesign 2016 SP1&lt;/b&gt;官方版本现已发布！请点击下载界面查看！</value>
+    <value>&lt;b&gt;ThinkDesign 2016 SP2&lt;/b&gt;官方版本现已发布！请点击下载界面查看！</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>填写信息获取ThinkDesign2016免费试用。</value>
@@ -303,14 +303,14 @@
   <data name="Description2015Utilitytools" xml:space="preserve">
     <value>浮动许可安装包，2015版实用程序和插件。</value>
   </data>
-  <data name="Description2016ThinkDesign32bit" xml:space="preserve">
-    <value>TD 2016旧版，适用旧系统。</value>
+  <data name="Description2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>TD 2016 SP2旧版，适用旧系统。</value>
   </data>
-  <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>本.iso文件将安装ThinkDesign suite 2016 64位官方版.。</value>
+  <data name="Description2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>推荐版本。ThinkDesign2016 SP2正式发布。</value>
   </data>
-  <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>本文件包含thinkPLM2016。</value>
+  <data name="Description2016thinkPLMSP2" xml:space="preserve">
+    <value>本文件包含thinkPLM2016 SP2正式版。</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2011.1build410/SelfCD_tdviewer_2011T1_b410.exe</value>
@@ -393,14 +393,14 @@
   <data name="Download2015Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2015.zip</value>
   </data>
-  <data name="Download2016ThinkDesign32bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=13a371ae4db5545a5ab249ad33cd10141&amp;authkey=Af2esvc4UfDlktxqnwFIZIQ</value>
   </data>
-  <data name="Download2016ThinkDesign64bit" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_64bit_2016T1_b20718.iso</value>
+  <data name="Download2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1a3dbf40105194a3fa398c799a4d6d8a8&amp;authkey=AezeTx-tm0HpAdfUvjNLswE</value>
   </data>
-  <data name="Download2016thinkPLM" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_thinkplm_2016T1_b20718.iso</value>
+  <data name="Download2016thinkPLMSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1714768a3a2964912ac55a15ebf97b601&amp;authkey=AZqZyyejfmWEjVDsbLpLC6g</value>
   </data>
   <data name="Product" xml:space="preserve">
     <value>产品</value>
@@ -477,14 +477,14 @@
   <data name="Product2015Utilitytools" xml:space="preserve">
     <value>实用程序 &amp; 浮动许可安装包</value>
   </data>
-  <data name="Product2016ThinkDesign32bit" xml:space="preserve">
-    <value>ThinkDesign 2016 32bit</value>
+  <data name="Product2016ThinkDesign32bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit SP2</value>
   </data>
-  <data name="Product2016ThinkDesign64bit" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit</value>
+  <data name="Product2016ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit SP2</value>
   </data>
-  <data name="Product2016thinkPLM" xml:space="preserve">
-    <value>thinkPLM 2016</value>
+  <data name="Product2016thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2016 SP2</value>
   </data>
   <data name="View_HomeIndex_of" xml:space="preserve">
     <value>公司名</value>
@@ -577,22 +577,22 @@
     <value>官方版下载！</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
+    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
   </data>
-  <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>本.iso文件将安装TDViewerLight 2016。</value>
+  <data name="Description2016TDViewerLightSP2" xml:space="preserve">
+    <value>本.iso文件将安装TDViewerLight 2016 SP2。</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>浮动许可安装包，2016版实用程序和插件。</value>
   </data>
-  <data name="Download2016TDViewerLight" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/tdviewer_2016T1_b20718_64bit.iso</value>
+  <data name="Download2016TDViewerLightSP2" xml:space="preserve">
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=16841283a9bfc4881ba9aa955a467ef1f&amp;authkey=AatBNuQCoNLZmH_tyRqq7RU</value>
   </data>
   <data name="Download2016Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2016.zip</value>
   </data>
-  <data name="Product2016TDViewerLight" xml:space="preserve">
-    <value>TDViewerLight 2016</value>
+  <data name="Product2016TDViewerLightSP2" xml:space="preserve">
+    <value>TDViewerLight 2016 SP2</value>
   </data>
   <data name="Product2016Utilitytools" xml:space="preserve">
     <value>实用程序 &amp; 浮动许可安装包</value>
@@ -874,7 +874,7 @@
     <value>TD 2016 SP1旧版，适用旧系统。</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>推荐版本。ThinkDesign2016 SP1正式发布。</value>
+    <value>本.iso文件将安装ThinkDesign 2016 SP1 64位官方版.。</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
     <value>本文件包含thinkPLM2016 SP1正式版。</value>
@@ -907,6 +907,6 @@
     <value>更新</value>
   </data>
   <data name="View_Download_Warning" xml:space="preserve">
-    <value>To install all CAD products of ThinkDesign suite (TDDrafting, TDBase, TDTooling, TDProfessional, etc.) you just need to &lt;b&gt;download the complete installation package of ThinkDesign&lt;/b&gt;. The different products will then be enabled through specific passwords.</value>
+    <value>要安装ThinkDesign套件的所有CAD产品（TDDrafting，TDBase，TDTooling，TDProfessional等），您只需&lt;b&gt;下载ThinkDesign的完整安装包&lt;/b&gt;。&lt;br/&gt;然后通过特定的密码启用不同的产品。</value>
   </data>
 </root>
