--- a/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
@@ -181,10 +181,10 @@
     <value>Bienvenur sur le nouveau portail du support client!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>Le &lt;b&gt;service pack 2 de ThinkDesign 2016&lt;/b&gt; est maintenant disponible! Consultez la rubrique téléchargement.</value>
+    <value>&lt;b&gt;ThinkDesign 2017&lt;/b&gt; est maintenant disponible! Consultez la rubrique téléchargement.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
-    <value>Essayez ThinkDesign 2016 gratuitement ! Contactez nous pour en savoir davantage.</value>
+    <value>Essayez ThinkDesign 2017 gratuitement ! Contactez nous pour en savoir davantage.</value>
   </data>
   <data name="View_Home_THelp" xml:space="preserve">
     <value>ThinkDesign Help</value>
@@ -481,7 +481,7 @@
     <value>de</value>
   </data>
   <data name="View_Home_NewLicensingLink" xml:space="preserve">
-    <value>http://www.think3.eu/images/pdf/Licenses.pdf</value>
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=10e1b89e67b164afa910c73bf518a86e6&amp;authkey=AdadxeQs5Tclf7h4dKIFuWQ</value>
   </data>
   <data name="AccountName" xml:space="preserve">
     <value>Nom du compte</value>
@@ -568,7 +568,7 @@
     <value>Télécharger la version officielle ici!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
+    <value>ThinkDesign 2017 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLightSP2" xml:space="preserve">
     <value>Ce fichier .iso va installer l'application TDViewerLight 2016 SP2.</value>
@@ -862,7 +862,7 @@
     <value>Renouvellement</value>
   </data>
   <data name="View_Download_Warning" xml:space="preserve">
-    <value>To install all CAD products of ThinkDesign suite (TDDrafting, TDBase, TDTooling, TDProfessional, etc.) you just need to &lt;b&gt;download the complete installation package of ThinkDesign&lt;/b&gt;. The different products will then be enabled through specific passwords.</value>
+    <value>Pour installer les produits CAO de la suite ThinkDesign (TDDrafting, TDBase, TDTooling, TDProfessional, etc.) vous devez &lt;b&gt;télécharger l'installation complète du logiciel ThinkDesign&lt;/b&gt;. Les différents produits seront activés via les mots de passe spécifiques.</value>
   </data>
   <data name="Description2017ThinkDesign64bit" xml:space="preserve">
     <value>Recommandée. Version officielle de ThinkDesign 2017.</value>
