--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -427,7 +427,7 @@
     <value>Nuovo Licensing</value>
   </data>
   <data name="View_Home_NewLicensingLink" xml:space="preserve">
-    <value>http://www.think3.eu/images/pdf/Licenses_it.pdf</value>
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=1727c219b3bdb43edb827a62f80cecca6&amp;authkey=AXrYTVbRetabZfD40_YuB-8</value>
   </data>
   <data name="View_Home_NewLicensing_Text" xml:space="preserve">
     <value>Tutto quello che devi sapere su C2V, V2C e licenze floating.</value>
@@ -436,10 +436,10 @@
     <value>Benvenuto nel nuovo portale del Customer Care!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>Il &lt;b&gt;Service Pack 2 di ThinkDesign 2016&lt;/b&gt; è stato rilasciato ed è ora disponibile nella sezione di Download.</value>
+    <value>&lt;b&gt;ThinkDesign 2017&lt;/b&gt; è stato rilasciato ed è ora disponibile nella sezione di Download.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
-    <value>Prova gratuitamente ThinkDesign 2016! Scrivici per saperne di più.</value>
+    <value>Prova gratuitamente ThinkDesign 2017! Scrivici per saperne di più.</value>
   </data>
   <data name="View_Home_THelp" xml:space="preserve">
     <value>ThinkDesign Help</value>
@@ -568,7 +568,7 @@
     <value>Scarica la nuova release ufficiale!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
+    <value>ThinkDesign 2017 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLightSP2" xml:space="preserve">
     <value>Questo file .iso permette di installare l'applicazione TDViewerLight 2016 SP2.</value>
