--- a/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
+++ b/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
@@ -181,10 +181,10 @@
     <value>欢迎访问 Customer Care 新界面！</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;ThinkDesign 2016 SP2&lt;/b&gt;官方版本现已发布！请点击下载界面查看！</value>
+    <value>&lt;b&gt;ThinkDesign 2017&lt;/b&gt;官方版本现已发布！请点击下载界面查看！</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
-    <value>填写信息获取ThinkDesign2016免费试用。</value>
+    <value>填写信息获取ThinkDesign2017免费试用。</value>
   </data>
   <data name="View_Home_THelp" xml:space="preserve">
     <value>ThinkDesign帮助文档</value>
@@ -481,7 +481,7 @@
     <value>公司名</value>
   </data>
   <data name="View_Home_NewLicensingLink" xml:space="preserve">
-    <value>http://www.think3.eu/images/pdf/Licenses.pdf</value>
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=10e1b89e67b164afa910c73bf518a86e6&amp;authkey=AdadxeQs5Tclf7h4dKIFuWQ</value>
   </data>
   <data name="AccountName" xml:space="preserve">
     <value>公司</value>
@@ -568,7 +568,7 @@
     <value>官方版下载！</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
+    <value>ThinkDesign 2017 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLightSP2" xml:space="preserve">
     <value>本.iso文件将安装TDViewerLight 2016 SP2。</value>
