--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -181,10 +181,10 @@
     <value>Willkommen im neuen Customer Care Portal!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;Service Pack 2 für ThinkDesign 2016&lt;/b&gt; ist jetzt verfügbar! Schauen Sie im Downloadbereich vorbei.</value>
+    <value>&lt;b&gt;ThinkDesign 2017&lt;/b&gt; ist jetzt verfügbar! Schauen Sie im Downloadbereich vorbei.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
-    <value>Testen Sie ThinkDesign 2016 kostenlos! Schreiben Sie uns um mehr zu erfahren.</value>
+    <value>Testen Sie ThinkDesign 2017 kostenlos! Schreiben Sie uns um mehr zu erfahren.</value>
   </data>
   <data name="View_Home_THelp" xml:space="preserve">
     <value>ThinkDesign Hilfe</value>
@@ -481,7 +481,7 @@
     <value>von</value>
   </data>
   <data name="View_Home_NewLicensingLink" xml:space="preserve">
-    <value>http://www.think3.eu/images/pdf/Licenses.pdf</value>
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=10e1b89e67b164afa910c73bf518a86e6&amp;authkey=AdadxeQs5Tclf7h4dKIFuWQ</value>
   </data>
   <data name="AccountName" xml:space="preserve">
     <value>Accountname</value>
@@ -568,7 +568,7 @@
     <value>Downloaden Sie hier das offizielle Release!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
+    <value>ThinkDesign 2017 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLightSP2" xml:space="preserve">
     <value>Diese .iso Datei installiert die Anwendung TDViewerLight 2016 SP2.</value>
