--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -436,10 +436,10 @@
     <value>新しいカスタマーケアポータルへようこそ！</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;ThinkDesign 2016 SP2&lt;/b&gt; がダウンロードエリアからご利用いただけます！</value>
+    <value>&lt;b&gt;ThinkDesign 2017&lt;/b&gt; がダウンロードエリアからご利用いただけます！</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 のフリートライアルが可能です。ご興味ある場合はお知らせください。</value>
+    <value>ThinkDesign 2017 のフリートライアルが可能です。ご興味ある場合はお知らせください。</value>
   </data>
   <data name="View_Home_THelp" xml:space="preserve">
     <value>ThinkDesign ヘルプ（英語）</value>
@@ -568,7 +568,7 @@
     <value>公式版のダウンロードが可能です！</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
+    <value>ThinkDesign 2017 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLightSP2" xml:space="preserve">
     <value>この iso ファイルは ThinkDesign Viewer 2016 SP2 のインストール用ファイルです。</value>
