--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -427,7 +427,7 @@
     <value>설치 가이드</value>
   </data>
   <data name="View_Home_NewLicensingLink" xml:space="preserve">
-    <value>http://www.think3.eu/images/pdf/Licenses.pdf</value>
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=10e1b89e67b164afa910c73bf518a86e6&amp;authkey=AdadxeQs5Tclf7h4dKIFuWQ</value>
   </data>
   <data name="View_Home_NewLicensing_Text" xml:space="preserve">
     <value>라이선스 작업 C2V, V2C 파일, 플로팅 라이선스 설치 등의 문서입니다.</value>
@@ -436,10 +436,10 @@
     <value>새로운 고객 관리 사이트에 오신 것을 환영합니다!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>&lt;b&gt;ThinkDesign 2016 SP2&lt;/b&gt; 다운로드 항목에서 사용할 수 있습니다!</value>
+    <value>&lt;b&gt;ThinkDesign 2017&lt;/b&gt; 다운로드 항목에서 사용할 수 있습니다!</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 무료 평가판이 가능합니다. 관심 있으면 알려 주시기 바랍니다.</value>
+    <value>ThinkDesign 2017 무료 평가판이 가능합니다. 관심 있으면 알려 주시기 바랍니다.</value>
   </data>
   <data name="View_Home_THelp" xml:space="preserve">
     <value>ThinkDesign 도움말(영어)</value>
@@ -568,7 +568,7 @@
     <value>Download here the official release!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
+    <value>ThinkDesign 2017 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLightSP2" xml:space="preserve">
     <value>이 iso 파일은 ThinkDesign Viewer 2016 SP2의 설치 파일입니다.</value>
@@ -862,7 +862,7 @@
     <value>Renew</value>
   </data>
   <data name="View_Download_Warning" xml:space="preserve">
-    <value>To install all CAD products of ThinkDesign suite (TDDrafting, TDBase, TDTooling, TDProfessional, etc.) you just need to &lt;b&gt;download the complete installation package of ThinkDesign&lt;/b&gt;. The different products will then be enabled through specific passwords.</value>
+    <value>ThinkDesign Suite (TDDrafting, TDBase, TDTooling, TDProfessional 등)의 모든 CAD 제품을 설치하려면 &lt;b&gt;ThinkDesign의 전체 설치 패키지를 다운로드 하면 됩니다&lt;/b&gt;. 각각의 제품은 특정 라이선스를 통해 별도로 활성화됩니다. 각각의 제품은 특정 라이선스를 통해 별도로 활성화됩니다.</value>
   </data>
   <data name="Description2017ThinkDesign64bit" xml:space="preserve">
     <value>ThinkDesign 2017 공식 릴리스. 권장 버전입니다.</value>
