--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -181,10 +181,10 @@
     <value>Welcome to the new Customer Care portal!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>The &lt;b&gt;Service Pack 2 of ThinkDesign 2016&lt;/b&gt; is now available! Have a look at the Download section.</value>
+    <value>&lt;b&gt;ThinkDesign 2017&lt;/b&gt; is now available! Have a look at the Download section.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
-    <value>Try for free ThinkDesign 2016! Write to us to know more.</value>
+    <value>Try for free ThinkDesign 2017! Write to us to know more.</value>
   </data>
   <data name="View_Home_THelp" xml:space="preserve">
     <value>ThinkDesign Help</value>
@@ -481,7 +481,7 @@
     <value>of</value>
   </data>
   <data name="View_Home_NewLicensingLink" xml:space="preserve">
-    <value>http://www.think3.eu/images/pdf/Licenses.pdf</value>
+    <value>https://dptsarl.sharepoint.com/_layouts/15/guestaccess.aspx?docid=10e1b89e67b164afa910c73bf518a86e6&amp;authkey=AdadxeQs5Tclf7h4dKIFuWQ</value>
   </data>
   <data name="AccountName" xml:space="preserve">
     <value>Account Name</value>
@@ -568,7 +568,7 @@
     <value>Download here the official release!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 SP2 (x64) - 2 GB</value>
+    <value>ThinkDesign 2017 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLightSP2" xml:space="preserve">
     <value>This .iso file will install the TDViewerLight 2016 SP2 application.</value>
