--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -868,7 +868,7 @@
     <value>Um alle CAD-Produkte der ThinkDesign Suite (TDDrafting, TDBase, TDTooling, TDProfessional usw.) zu installieren, müssen Sie nur &lt;b&gt;das komplette Installationspaket von ThinkDesign herunterladen&lt;/b&gt;. Die verschiedenen Produkte werden dann durch bestimmte Passwörter aktiviert.</value>
   </data>
   <data name="Description2017ThinkDesign64bit" xml:space="preserve">
-    <value>Empfohlene Version. Offizielles Release ThinkDesign 2017.</value>
+    <value>Empfohlene Version. Offizielles Release ThinkDesign 2017. (SHA1=C41DE315E52D7C9D9D5ED9D012D5FA78E9AA13BE)</value>
   </data>
   <data name="Product2017ThinkDesign64bit" xml:space="preserve">
     <value>ThinkDesign 2017 64bit</value>
