--- a/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
@@ -865,7 +865,7 @@
     <value>Pour installer les produits CAO de la suite ThinkDesign (TDDrafting, TDBase, TDTooling, TDProfessional, etc.) vous devez &lt;b&gt;télécharger l'installation complète du logiciel ThinkDesign&lt;/b&gt;. Les différents produits seront activés via les mots de passe spécifiques.</value>
   </data>
   <data name="Description2017ThinkDesign64bit" xml:space="preserve">
-    <value>Recommandée. Version officielle de ThinkDesign 2017.</value>
+    <value>Recommandée. Version officielle de ThinkDesign 2017. (SHA1=C41DE315E52D7C9D9D5ED9D012D5FA78E9AA13BE)</value>
   </data>
   <data name="Product2017ThinkDesign64bit" xml:space="preserve">
     <value>ThinkDesign 2017 64bit</value>
