--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -865,7 +865,7 @@
     <value>Per installare tutti i prodotti CAD della suite ThinkDesign (TDDrafting, TDBase, TDTooling, TDProfessional, ecc.) basta &lt;b&gt;scaricare il pacchetto di installazione completo di ThinkDesign&lt;/b&gt;. I vari prodotti verranno poi abilitati tramite password ad hoc.</value>
   </data>
   <data name="Description2017ThinkDesign64bit" xml:space="preserve">
-    <value>Versione raccomandata. Release ufficiale di ThinkDesign 2017.</value>
+    <value>Versione raccomandata. Release ufficiale di ThinkDesign 2017. (SHA1=C41DE315E52D7C9D9D5ED9D012D5FA78E9AA13BE)</value>
   </data>
   <data name="Product2017ThinkDesign64bit" xml:space="preserve">
     <value>ThinkDesign 2017 64bit</value>
