--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -865,7 +865,7 @@
     <value>ThinkDesign suite（TDDrafting、TDBase、TDTooling、TDProfessional など）のすべての CAD 製品をインストールするには、はじめに &lt;b&gt;ThinkDesign の完全なインストールパッケージをダウンロードします&lt;/b&gt;。その後、それぞれの製品用のパスワードを入力します。</value>
   </data>
   <data name="Description2017ThinkDesign64bit" xml:space="preserve">
-    <value>ThinkDesign 2017 公式リリース版。推奨バージョンです。</value>
+    <value>ThinkDesign 2017 公式リリース版。推奨バージョンです。 (SHA1=C41DE315E52D7C9D9D5ED9D012D5FA78E9AA13BE)</value>
   </data>
   <data name="Product2017ThinkDesign64bit" xml:space="preserve">
     <value>ThinkDesign 2017 64bit</value>
