--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -865,7 +865,7 @@
     <value>ThinkDesign Suite (TDDrafting, TDBase, TDTooling, TDProfessional 등)의 모든 CAD 제품을 설치하려면 &lt;b&gt;ThinkDesign의 전체 설치 패키지를 다운로드 하면 됩니다&lt;/b&gt;. 각각의 제품은 특정 라이선스를 통해 별도로 활성화됩니다. 각각의 제품은 특정 라이선스를 통해 별도로 활성화됩니다.</value>
   </data>
   <data name="Description2017ThinkDesign64bit" xml:space="preserve">
-    <value>ThinkDesign 2017 공식 릴리스. 권장 버전입니다.</value>
+    <value>ThinkDesign 2017 공식 릴리스. 권장 버전입니다. (SHA1=C41DE315E52D7C9D9D5ED9D012D5FA78E9AA13BE)</value>
   </data>
   <data name="Product2017ThinkDesign64bit" xml:space="preserve">
     <value>ThinkDesign 2017 64bit</value>
