--- a/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
+++ b/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
@@ -865,7 +865,7 @@
     <value>要安装ThinkDesign套件的所有CAD产品（TDDrafting，TDBase，TDTooling，TDProfessional等），您只需&lt;b&gt;下载ThinkDesign的完整安装包&lt;/b&gt;。&lt;br/&gt;然后通过特定的密码启用不同的产品。</value>
   </data>
   <data name="Description2017ThinkDesign64bit" xml:space="preserve">
-    <value>推荐版本。ThinkDesign2017 正式发布。</value>
+    <value>推荐版本。ThinkDesign2017 正式发布。 (SHA1=C41DE315E52D7C9D9D5ED9D012D5FA78E9AA13BE)</value>
   </data>
   <data name="Product2017ThinkDesign64bit" xml:space="preserve">
     <value>ThinkDesign 2017 64bit</value>
