--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -865,7 +865,7 @@
     <value>To install all CAD products of ThinkDesign suite (TDDrafting, TDBase, TDTooling, TDProfessional, etc.) you just need to &lt;b&gt;download the complete installation package of ThinkDesign&lt;/b&gt;. The different products will then be enabled through specific passwords.</value>
   </data>
   <data name="Description2017ThinkDesign64bit" xml:space="preserve">
-    <value>Recommended version. Official release of ThinkDesign 2017.</value>
+    <value>Recommended version. Official release of ThinkDesign 2017. (SHA1=C41DE315E52D7C9D9D5ED9D012D5FA78E9AA13BE)</value>
   </data>
   <data name="Product2017ThinkDesign64bit" xml:space="preserve">
     <value>ThinkDesign 2017 64bit</value>
