utility tools 2017 uploaded + license logic management updated

--- a/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
@@ -876,4 +876,10 @@
   <data name="Product2017thinkPLM" xml:space="preserve">
     <value>thinkPLM 2017</value>
   </data>
+  <data name="Description2017Utilitytools" xml:space="preserve">
+    <value>Programme d'installation des utilitaires et ajouts pour la version 2017. (SHA1=CB6DF0407B9313F15CC343611F5FBAFC7DCF02C2)</value>
+  </data>
+  <data name="Product2017Utilitytools" xml:space="preserve">
+    <value>Programme d'installation des utilitaires 64bit</value>
+  </data>
 </root>
