--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -876,4 +876,10 @@
   <data name="Product2017thinkPLM" xml:space="preserve">
     <value>thinkPLM 2017</value>
   </data>
+  <data name="Description2017Utilitytools" xml:space="preserve">
+    <value>버전 2017 용 유틸리티 도구. (SHA1=CB6DF0407B9313F15CC343611F5FBAFC7DCF02C2)</value>
+  </data>
+  <data name="Product2017Utilitytools" xml:space="preserve">
+    <value>유틸리티 도구 64bit</value>
+  </data>
 </root>
