--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -876,4 +876,10 @@
   <data name="Product2017thinkPLM" xml:space="preserve">
     <value>thinkPLM 2017</value>
   </data>
+  <data name="Description2017Utilitytools" xml:space="preserve">
+    <value>Procedure di utilità e plug-in per la versione 2017.(SHA1=CB6DF0407B9313F15CC343611F5FBAFC7DCF02C2)</value>
+  </data>
+  <data name="Product2017Utilitytools" xml:space="preserve">
+    <value>Utility tools 64bit</value>
+  </data>
 </root>
